--- a/style.css
+++ b/style.css
@@ -1,54 +1,45 @@
 html,body {
-    background-color:black;
-    scroll-behavior: smooth;
-    color:rgb(255,255,255,0.9);
+    background-color: black;
+    color: rgb(255,255,255,0.9);
     font-family: 'Montserrat', sans-serif;
-    max-width:100%;
+    max-width: 100%;
+    padding: 0 !important;
     pointer-events: none;
-    padding:0!important;
+    scroll-behavior: smooth;
 }
 
 h1,h2 {
-    padding: .5rem!important;
-    text-shadow:2px 2px #000000;
-    
+    padding: 0.5rem !important;
+    text-shadow: 2px 2px #000000;
 }
 
-/*.section_header {
-    width: 90%;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-}*/
-
 h3 {
-    text-shadow:1px 1px #000000;
+    text-shadow: 1px 1px #000000;
 }
 
 .btn {
-    cursor:pointer;
+    cursor: pointer;
 }
 
-
-/* General Section Styling */
+/* Section Styling */
 
 section {
-    pointer-events:auto!important;
-    min-height:100vh;
-    display:flex;
-    position:relative;
+    display: flex;
+    min-height: 100vh;
+    pointer-events: auto !important;
+    position: relative;
 }
 
 .section-transition {
-    transition:500ms ease-in-out;
+    transition: 500ms ease-in-out;
 }
 
-section:first-of-type {
-    height:100vh;
+.section_top_buffer {
+    height: 6rem;
 }
 
-.section_buffer {
-    height:50px;
+.section_bottom_buffer {
+    height: 50px;
 }
 
 .parallax-section-active {
@@ -58,36 +49,35 @@ section:first-of-type {
 }
 
 .parallax-section-dummy {
-    transition:500ms ease-in-out;
-    pointer-events:none;
+    transition: 500ms ease-in-out;
+    pointer-events: none;
 }
 
 .hide-section {
-    opacity:0;
+    opacity: 0;
 }
-
 
 /* Navbar */
 
 .navbar {
+    background-color: rgba(0,0,0,0);
+    margin: 0 !important;
+    padding: 1rem !important;
     pointer-events: auto!important;
-    background-color:rgba(0,0,0,0);
-    position:fixed;
-    width:100%;
-    margin:0!important;
-    padding:1rem!important;
-    transition:500ms ease-in-out;
+    position: fixed;
+    transition: 500ms ease-in-out;
+    width: 100%;
 }
 
 .navbar.hidden {
-    opacity:0;
+    opacity: 0;
 }
 
 .navbar a {
-    color:white!important;
-    text-shadow:1px 1px #000000;
-    font-size:1.25rem;
-    font-weight:300;
+    color: white !important;
+    font-size: 1.25rem;
+    font-weight: 300;
+    text-shadow: 1px 1px #000000;
 }
 
 .nav-link.active {
@@ -97,44 +87,46 @@ section:first-of-type {
 /* Home Section */
 
 #home {
-    text-shadow:2px 2px #000000;
-    font-size:1.5em;
+    font-size: 1.5em;
+    text-shadow: 2px 2px #000000; 
 }
 
 .home-image {
-    background-image:url('https://images.pexels.com/photos/234527/pexels-photo-234527.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
-    height:100%;
-    width:100%;
-    background-attachment:fixed;
-    background-position:center;
-    background-repeat:no-repeat;
-    background-size:cover;
-    position:fixed;
-    
+    background-image: url('https://images.pexels.com/photos/234527/pexels-photo-234527.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940');
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    position: fixed;
+    width: 100%;
 }
 
-
 .home_container {
-    position:fixed;
-    justify-content:center;
+    justify-content: center;
+    left: 50%;
+    position: fixed;
+    text-align: center;
+    top: 50%;
     transform: translate(-50%,-50%);
-    top:50%;
-    left:50%;
-    width:90%;
-    transition:500ms ease-in-out;
-    text-align:center;
+    transition: 500ms ease-in-out;
+    width: 90%;
+}
+
+.home_container.scrolled, .home_scroll.scrolled {
+    opacity: 0 !important;
 }
 
 .home_scroll {
-    position:fixed;
-    justify-content:center;
-    bottom:5%;
-    left:50%;
-    transition:500ms ease-in-out;
-    transform: translate(-50%,-50%);
     animation: bounce 1.5s infinite;
+    bottom: 5%;
+    justify-content: center;
+    left: 50%;
+    opacity: 0;
+    position: fixed;
+    transform: translate(-50%,-50%);
+    transition: 500ms ease-in-out;
     transition-timing-function: cubic-bezier(0.25, 0.75, 0.5, 1);
-    opacity:0;
 }
 
 @keyframes bounce {
@@ -146,14 +138,10 @@ section:first-of-type {
     100%    { bottom: 5%; }
 }
 
-.home_container.scrolled, .home_scroll.scrolled {
-    opacity:0!important;
-}
-
 /* About Section */
 
-#about {
-
+.img-fluid {
+    max-height: 25em;
 }
 
 .center {
@@ -162,49 +150,25 @@ section:first-of-type {
     margin-right: auto;
 }
 
-#about_content {
-    position:absolute;
-    top:55%;
-    left:50%;
-    align-content: center;
-    justify-content:center;
-    transform: translate(-50%,-50%);
-    width:90%;
-}
-
 /* Skills Section */
 
-#skills {
-
-}
-
 .list-group-item {
-    color:black!important;
-    font-weight:1rem;
+    color: black !important;
+    font-weight: 1rem;
 }
 
 svg,.svg {
-    text-align:'left';
-    width:2em;
-    height:2em;
+    height: 2em;
     pointer-events: none;
+    text-align: 'left';
+    width: 2em;
 }
 
 li {
     user-select: none;
 }
 
-.portfolio-container {
-    /*overflow-y:auto;*/
-}
-
-.col-overflow {
-    -ms-flex-preferred-size: 0!important;
-    flex-basis: 0!important;
-    -ms-flex-positive: 1!important;
-    flex-grow: 1!important;
-    max-width: 20%!important;
-}
+/* Portfolio */
 
 .filterable {
     transition: all 300ms;
@@ -215,74 +179,70 @@ li {
 }
 
 .card {
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15) !important;
     cursor: pointer;
-    overflow:hidden;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-}
-
-.img-fluid {
-    max-height:25em;
+    overflow: hidden;
 }
 
 .carousel-caption {
-    background:rgba(0,0,0,0.7);
-    bottom:0;
-    width:100%;
-    height:35%;
-    left:0;
-    opacity:1;
-    right:0;
-    transition:500ms ease-in-out
+    background: rgba(0,0,0,0.7);
+    bottom: 0;
+    height: 35%;
+    left: 0;
+    opacity: 1;
+    right: 0;
+    transition: 500ms ease-in-out;
+    width: 100%;
 }
 
 .carousel-text {
-    bottom:0;
-    opacity:0;
-    position:absolute;
-    text-align:center;
-    transition:500ms ease-in-out;
-    width:100%;
+    bottom: 0;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    transition: 500ms ease-in-out;
+    width: 100%;
 }
 
 .carousel-item.show > .carousel-caption{
-    opacity:1;
+    opacity: 1;
 }
 
 .carousel-item.show > .carousel-caption > .carousel-text {
-    bottom:20%;
-    opacity:1;
+    bottom: 20%;
+    opacity: 1;
 }
 
 .overlay-color {
-    background:rgba(0,0,0,0.7);
-    height:100%;
-    left:0;
-    opacity:0;
-    position:absolute;
-    transition:300ms ease-in-out;
-    top:0;
+    background: rgba(0,0,0,0.7);
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    transition: 300ms ease-in-out;
     width:100%;
 }
 
 .card-img-overlay:hover .overlay-color {
-    opacity:1;
+    opacity: 1;
 }
 
 .overlay-text {
     color: rgb(255,255,255);
-    left:0;
-    opacity:0;
-    position:absolute;
-    text-align:center;
-    top:45%;
-    transform:translateY(-50%);
-    transition:300ms ease-in-out;
-    width:100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    text-align: center;
+    top: 45%;
+    transform: translateY(-50%);
+    transition: 300ms ease-in-out;
+    width: 100%;
 }
 
 .card-img-overlay:hover .overlay-text {
-    top:50%;
-    opacity:1;
+    opacity: 1;
+    top: 50%;
 }
 
 .modal {
@@ -290,7 +250,7 @@ li {
 }
 
 .modal-content {
-    background-color:rgb(0,0,0,0.6);
+    background-color: rgb(0,0,0,0.5);
 }
 
 .modal-open {
@@ -308,22 +268,21 @@ li {
     width:90%;
 }
 
-
 /* Media Queries */
 /* sm : 576px, md : 768px, lg : 992px, xl 1200px */
 
 @media (max-width: 576px) {
 
     .navbar {
-        width:auto!important;
+        width: auto !important;
     }
 
     h1 {
-        text-align:center;
+        text-align: center;
     }
 
     #link_container {
-        justify-content:center!important;
+        justify-content: center !important;
     }
 
     .lead {
