Added an about me description to the about me section

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1269,6 +1269,10 @@ input, select, textarea {
 			grid-template-columns: repeat(4, 1fr);
 		}
 
+		.skills .skill_bold {
+			font-weight: 700;
+		}
+
 		.panel__info {
 			padding-right: 1em;
 			min-height: 9em;
